--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -10,3 +10,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+
+      - name: Instalar o poetry
+        run: pixp install poetry
+
+      - name: Instalar dependências
+        run: poetry install
+      
+      - name: Executar Testes
+        run: poetry run task test
