--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -6,13 +6,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Copia os arquivos do repositório
+        uses: actions/checkout@v3
+
       - name: Instalar o python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
       - name: Instalar o poetry
-        run: pixp install poetry
+        run: pipx install poetry
 
       - name: Instalar dependências
         run: poetry install
